# anon-aadhaar-react-native

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  anon-aadhaar-react-native.podspec  app.json  download_bindings.sh  expo-module.config.json  package-lock.json  package.json  react-native-awesome-library.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonaadhaarreactnative/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: anon-aadhaar-react-native.cpp  anon-aadhaar-react-native.h  cpp-adapter.cpp  prover.h  witnesscalc_aadhaar_verifier.h
android/src/main/java/com/anonaadhaar/reactnative/: ReactNativeModule.kt  ReactNativePackage.kt
android/src/main/java/com/awesomelibrary/: AwesomeLibraryModule.kt  AwesomeLibraryPackage.kt
android/src/main/java/com/rapidsnark/: RapidsnarkModule.java  RapidsnarkModule.kt  RapidsnarkPackage.java  RapidsnarkPackage.kt
android/src/main/java/expo/modules/anonaadhaar/: AnonAadhaarPackageModule.kt  AnonAadhaarPackageView.kt  AnonAadhaarType.kt
android/src/main/java/uniffi/mopro/: mopro.kt
app/: _layout.tsx
example/: README.md  app.json  metro.config.js  package.json  react-native.config.js  tsconfig.json  webpack.config.js
ios/: AnonAadhaarPackage.podspec  AnonAadhaarPackageModule.swift  AnonAadhaarPackageView.swift  AnonAadhaarType.swift  AwesomeLibrary.h  AwesomeLibrary.mm  MoproCircomBridge.m  Prover.m  Prover.swift  Rapidsnark.mm  ReactNative.mm  ReactNative.swift  WitnesscalcFramework.h  mopro.swift  witnesscalc_aadhaar_verifier.h
modules/zkProofModule/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
modules/zkProofModule/android/src/main/: AndroidManifest.xml
modules/zkProofModule/android/src/main/java/com/anonaadhaar/reactnative/: ReactNativeModule.kt  ReactNativePackage.kt
src/: AnonAadhaarPackage.types.ts  AnonAadhaarPackageModule.ts  AnonAadhaarPackageModule.web.ts  AnonAadhaarPackageView.tsx  AnonAadhaarPackageView.web.tsx  ProofModal.tsx  aadhaarScanner.tsx  certificate.ts  certificates.ts  constants.ts  generateInputs.ts  groth16Prover.ts  hash.ts  icons.ts  index.ts  index.tsx  moproProver.ts  storage.ts  types.ts  uploadPNG.ts  util.ts  (+1 more)
(+87 files in other folders)
